--- a/theme/snapr/css/pages.less
+++ b/theme/snapr/css/pages.less
@@ -1982,6 +1982,7 @@
         left: -70px;
         width: 139px;
         height: 47px;
+        z-index: 1;
         .spot-icon{
             position: absolute;
             top: 5px;
